syntax = "proto3";

package chainStorage;
option go_package = "/chainStorage";

message Todo {
  string key = 1;
  string value = 2;
  bool committed = 3;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message GetRequest {
  string key = 1;
}

message PutResponse {
  string status = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

service ChainReplication {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Commit(Todo) returns (PutResponse);
}
